Byte.valueOf() is definitely faster than new Byte()
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/lang/trunk@754804 13f79535-47bb-0310-9956-ffa450edef68